--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ h1 span{
 section{
     display: flex;
     height: 500px;
+    margin-bottom: 150px;
     padding-bottom: 150px;
 }
 .half-width{
@@ -43,4 +44,11 @@ section{
 .top-banner{
     background-image: url("images/top-banner.png");
     background-repeat: no-repeat;
+}
+
+.dream-big{
+  
+     background-image: url(images/dream-bg.png);
+     background-repeat: no-repeat;
+     background-position: right;
 }
