--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ h1 span{
     color: orange;
 }
 section{
-    display: flex;
+    
     height: 500px;
     margin-bottom: 150px;
     padding-bottom: 150px;
@@ -27,6 +27,24 @@ section{
     float: left;
     margin-left: 5%;
     padding-left: 2%;
+    
+}
+#full-stack.half-width{
+
+    width:40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+    box-shadow: 10px 10px yellowgreen;
+}
+#baby-web.half-width{
+
+    width:40%;
+    float: left;
+    margin-left: 5%;
+    padding-left: 2%;
+    box-shadow: 10px 10px yellowgreen;
+
 }
 .half-width img{
     width: 100%;
@@ -51,4 +69,35 @@ section{
      background-image: url(images/dream-bg.png);
      background-repeat: no-repeat;
      background-position: right;
+}
+.dream-area{
+    background-image: url("images/dream-bg.png");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+experience-area{
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-area h3{
+    color: orange;
+}
+
+.experience-area div{
+    box-shadow: 5px 7px 40px gray;
+    height: 80%;
+}
+#full-stack{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, lightsalmon, tomato);
+    border-image-slice: 1;
+}
+#baby-web{
+    border-left: 7px solid;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
